--- a/文本挖掘HW1_HMM/main.ipynb
+++ b/文本挖掘HW1_HMM/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "['BE BE S BE S ', 'BMME BE S ', 'S BE S BE S S ']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -157,6 +157,87 @@
     "print(rounded_transfer_matrix)\n",
     "print(hmm.emit_matrix)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Viterbi(hmm, laplace, sentence):\n",
+    "    states = hmm.states_to_index\n",
+    "    emit_matrix = hmm.emit_matrix\n",
+    "    transfer_matrix = hmm.transfer_matrix\n",
+    "    init_matrix = hmm.init_matrix\n",
+    "\n",
+    "    sentence_length = len(sentence)  \n",
+    "    num_states = len(states)  \n",
+    "    dp = np.zeros((num_states, sentence_length)) \n",
+    "    prev_state = np.zeros((num_states, sentence_length), dtype=int)  \n",
+    "\n",
+    "    for state, index in states.items():\n",
+    "        if sentence[0] in emit_matrix[state]:\n",
+    "            dp[index, 0] = init_matrix[index] * emit_matrix[state][sentence[0]]\n",
+    "        else:\n",
+    "            dp[index, 0] = laplace\n",
+    "    \n",
+    "    # 动态规划填充 dp 和 prev_state 矩阵\n",
+    "    for t in range(1, sentence_length):\n",
+    "        for state, index in states.items():  # 遍历当前时刻所有可能的状态\n",
+    "            max_prob = -1\n",
+    "            max_state = -1\n",
+    "            for previous_state in range(num_states):  # 遍历前一个时刻的所有状态，寻找最大概率的路径\n",
+    "                emit_prob = emit_matrix[state].get(sentence[t], laplace)  # 获取当前状态发射该字符的概率\n",
+    "                prob = dp[previous_state, t-1] * transfer_matrix[previous_state, index] * emit_prob  # 计算总概率\n",
+    "                if prob > max_prob:\n",
+    "                    max_prob = prob\n",
+    "                    max_state = previous_state  # 记录当前时刻的最优前驱状态\n",
+    "            dp[index, t] = max_prob  # 记录最大概率到 dp 矩阵\n",
+    "            prev_state[index, t] = max_state  # 记录最优前驱状态到 prev_state 矩阵\n",
+    "\n",
+    "    # 回溯步骤，寻找最优路径\n",
+    "    best_path = []\n",
+    "    last_state_index = np.argmax(dp[:, sentence_length-1])  # 找到最后一步的最大概率状态\n",
+    "    best_path.append(last_state_index)\n",
+    "\n",
+    "    # 根据 prev_state 矩阵进行回溯，找到整个最优路径\n",
+    "    for t in range(sentence_length-1, 0, -1):\n",
+    "        last_state_index = prev_state[last_state_index, t]  # 回溯到前驱状态\n",
+    "        best_path.append(last_state_index)\n",
+    "\n",
+    "    best_path.reverse()  # 反转路径，因为回溯是从最后一个时刻开始的\n",
+    "\n",
+    "    # 将状态索引转换回状态名称\n",
+    "    index_to_states = {index: state for state, index in states.items()}  # 索引到状态的映射\n",
+    "    best_path_states = [index_to_states[index] for index in best_path]  # 将索引转换为状态名称\n",
+    "\n",
+    "    return ''.join(best_path_states)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BEBESBES\n"
+     ]
+    }
+   ],
+   "source": [
+    "ans = Viterbi(hmm,'今天天气真不错。')\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
