--- a/文本挖掘HW1_HMM/main.ipynb
+++ b/文本挖掘HW1_HMM/main.ipynb
@@ -88,7 +88,6 @@
     "\n",
     "    def build_transfer_matrix(self,states):\n",
     "        states = \"\".join(states)\n",
-    "        print(states)\n",
     "        st1 = states[:-1]\n",
     "        st2 = states[1:]\n",
     "        for head,tail in zip(st1,st2):\n",
@@ -137,9 +136,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BEBESBES\n",
-      "BMMEBES\n",
-      "SBESBESS\n",
       "[0.66666667 0.         0.         0.33333333]\n",
       "[[0.    0.143 0.857 0.   ]\n",
       " [0.    0.5   0.5   0.   ]\n",
@@ -160,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,42 +177,39 @@
     "        else:\n",
     "            dp[index, 0] = laplace\n",
     "    \n",
-    "    # 动态规划填充 dp 和 prev_state 矩阵\n",
     "    for t in range(1, sentence_length):\n",
-    "        for state, index in states.items():  # 遍历当前时刻所有可能的状态\n",
+    "        for state, index in states.items(): \n",
     "            max_prob = -1\n",
     "            max_state = -1\n",
-    "            for previous_state in range(num_states):  # 遍历前一个时刻的所有状态，寻找最大概率的路径\n",
-    "                emit_prob = emit_matrix[state].get(sentence[t], laplace)  # 获取当前状态发射该字符的概率\n",
-    "                prob = dp[previous_state, t-1] * transfer_matrix[previous_state, index] * emit_prob  # 计算总概率\n",
+    "            for previous_state in range(num_states):\n",
+    "                emit_prob = emit_matrix[state].get(sentence[t], laplace)  \n",
+    "                prob = dp[previous_state, t-1] * transfer_matrix[previous_state, index] * emit_prob \n",
     "                if prob > max_prob:\n",
     "                    max_prob = prob\n",
-    "                    max_state = previous_state  # 记录当前时刻的最优前驱状态\n",
-    "            dp[index, t] = max_prob  # 记录最大概率到 dp 矩阵\n",
-    "            prev_state[index, t] = max_state  # 记录最优前驱状态到 prev_state 矩阵\n",
+    "                    max_state = previous_state \n",
+    "            dp[index, t] = max_prob  \n",
+    "            prev_state[index, t] = max_state \n",
     "\n",
-    "    # 回溯步骤，寻找最优路径\n",
+    "\n",
     "    best_path = []\n",
-    "    last_state_index = np.argmax(dp[:, sentence_length-1])  # 找到最后一步的最大概率状态\n",
+    "    last_state_index = np.argmax(dp[:, sentence_length-1])  \n",
     "    best_path.append(last_state_index)\n",
     "\n",
-    "    # 根据 prev_state 矩阵进行回溯，找到整个最优路径\n",
     "    for t in range(sentence_length-1, 0, -1):\n",
-    "        last_state_index = prev_state[last_state_index, t]  # 回溯到前驱状态\n",
+    "        last_state_index = prev_state[last_state_index, t] \n",
     "        best_path.append(last_state_index)\n",
     "\n",
-    "    best_path.reverse()  # 反转路径，因为回溯是从最后一个时刻开始的\n",
+    "    best_path.reverse() \n",
     "\n",
-    "    # 将状态索引转换回状态名称\n",
-    "    index_to_states = {index: state for state, index in states.items()}  # 索引到状态的映射\n",
-    "    best_path_states = [index_to_states[index] for index in best_path]  # 将索引转换为状态名称\n",
+    "    index_to_states = {index: state for state, index in states.items()}  \n",
+    "    best_path_states = [index_to_states[index] for index in best_path]  \n",
     "\n",
     "    return ''.join(best_path_states)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +221,7 @@
     }
    ],
    "source": [
-    "ans = Viterbi(hmm,'今天天气真不错。')\n",
+    "ans = Viterbi(hmm, 0.0001, '今天天气真不错。')\n",
     "print(ans)"
    ]
   },
